@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-12-04T08:16:11Z",
-  "count_outdated" : 693,
-  "uniques_outdated" : 392,
-  "count" : 715,
-  "uniques" : 402,
+  "timestamp" : "2022-12-05T01:05:39Z",
+  "count_outdated" : 700,
+  "uniques_outdated" : 395,
+  "count" : 721,
+  "uniques" : 404,
   "clones" : [
-    {
-      "timestamp": "2022-11-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 7 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ]
-    },
     {
       "timestamp": "2022-11-21T00:00:00Z",
       "count": 1,
