@@ -1,3 +1,11 @@
+2022-12-05T01:05:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3615962143 # 1089
+* notice: last 14d: unq all: 4 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 392 693 / 402 715
+* notice: next accum: outdated-unq outdated-all / unq all: 395 700 / 404 721
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-11-20] / []
+
 2022-12-04T08:16:11Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3612392535 # 1087
 * notice: last 14d: unq all: 4 22
